<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@drawable/baseline_double_arrow_24">

    <!-- Основной контент -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Кнопка для открытия выдвижного меню -->
        <ImageButton
            android:id="@+id/button_open_drawer"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="Open Drawer"
            android:background="@drawable/menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="10dp"/>

        <!-- ViewPager2 и индикаторы -->
        <LinearLayout
            android:id="@+id/viewpager_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/button_open_drawer">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="6"
                android:background="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/indicator_1"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/circle_white"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/indicator_1"/>

                <ImageView
                    android:id="@+id/indicator_2"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/circle_white"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/indicator_2"/>

                <ImageView
                    android:id="@+id/indicator_3"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/circle_white"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/indicator_3"/>

                <ImageView
                    android:id="@+id/indicator_4"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/circle_white"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/indicator_4"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Выдвижное меню -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <!-- Макет вашего меню -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Элементы меню -->
            <Button
                android:id="@+id/matchi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Матчи" />

            <Button
                android:id="@+id/resultat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Недавние Матчи" />
            <Button
                android:id="@+id/igroki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Наши Игроки" />
            <Button
                android:id="@+id/sob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="события" />

            <View
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="#4E4E4E"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"

                />
        </LinearLayout>

        <!-- Кнопка выход -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <Button
                android:id="@+id/button_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Выход" />
        </FrameLayout>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
